--- a/index.html
+++ b/index.html
@@ -10,21 +10,64 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/css/style.css" />
+    <script src="https://kit.fontawesome.com/24dd7fc6b2.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
-      <div class="logo"></div>
-      <div class="logo-text"></div>
-      <nav class="search">
-        <input type="text" />
-      </nav>
-      <div class="tag-container"></div>
-      <div class="dropdown-container">
-        <div class="ingredients-search"></div>
-        <div class="device-search"></div>
-        <div class="utensils-search"></div>
+    <header class="container my-4 text-center">
+      <div class="logo">
+        <img src="/assets/logo.svg" alt="Les petits plats logo" />
+      </div>
+      <div class="logo-text">
+        <h1 class="text-danger">Les Petits Plats</h1>
+      </div>
+      <div class="container-search my-5">
+        <form class="main-search">
+          <input
+            class="form-control col-12 bg-light"
+            name="search"
+            placeholder="Search for recipes, ingredients..."
+          />
+        </form>
       </div>
     </header>
+    <section class="search-filters container">
+      <div class="tag-container"></div>
+      <div class="dropdown-container row gx-50">
+        <ul
+          class="ingredients-search rounded-1 dropdown bg-primary py-3 col-2 input-container d-flex"
+        >
+          <input
+            type="text"
+            class="form-control bg-primary filter-input"
+            id="filter-ingredients"
+            placeholder="Ingredients"
+            aria-label="ingredients"
+          />
+          <img src="/assets/chevron-down.svg" alt="" />
+        </ul>
+        <ul class="device-search rounded-1 dropdown bg-success py-3 col-2 input-container d-flex">
+          <input
+            type="text"
+            class="form-control bg-success filter-input"
+            id="filter-ingredients"
+            placeholder="Devices"
+            aria-label="devices"
+          />
+          <img src="/assets/chevron-down.svg" alt="" />
+        </ul>
+        <ul class="utensils-search rounded-1 dropdown bg-danger py-3 col-2 input-container d-flex">
+          <input
+            type="text"
+            class="form-control bg-danger filter-input"
+            id="filter-ingredients"
+            placeholder="Utensils"
+            aria-label="utensils"
+          />
+          <img src="/assets/chevron-down.svg" alt="" />
+        </ul>
+      </div>
+    </section>
     <main>
       <div class="recipe-container">
         <div class="recipe-card"></div>
