--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="https://kit.fontawesome.com/24dd7fc6b2.js" crossorigin="anonymous"></script>
+    <script type="module" src="script.js" defer></script>
   </head>
   <body>
     <header class="container my-4 text-center">
@@ -68,10 +68,34 @@
         </ul>
       </div>
     </section>
-    <main>
-      <div class="recipe-container">
-        <div class="recipe-card"></div>
-      </div>
+    <main class="container">
+      <div class="recipe-container row row-cols-3 g-5" data-recipe-card-container></div>
+      <template data-recipe-card>
+        <div class="recipe-card col">
+          <div class="recipe-card-img"></div>
+          <div class="recipe-info p-3">
+            <div
+              class="recipe-card-header fs-5 d-flex justify-content-between align-items-center"
+              data-card-header
+            >
+              <div class="recipe-card-title" data-card-title></div>
+              <div class="recipe-time-container d-flex gap-2 align-items-center">
+                <img src="/assets/clock.svg" alt="" />
+                <span class="time" data-card-time></span>
+              </div>
+            </div>
+            <div class="card-bottom-container row row-cols-2 my-2">
+              <ul class="ingredients-list" data-card-ingredients>
+                <li>
+                  <span class="ingredient">vcewfewv</span>
+                  <span class="value-unit">vwevwvew</span>
+                </li>
+              </ul>
+              <div class="description" data-card-description></div>
+            </div>
+          </div>
+        </div>
+      </template>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
