--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             class="form-control col-12 bg-light"
             name="search"
             placeholder="Search for recipes, ingredients..."
+            data-search
           />
         </form>
       </div>
@@ -85,12 +86,7 @@
               </div>
             </div>
             <div class="card-bottom-container row row-cols-2 my-2">
-              <ul class="ingredients-list" data-card-ingredients>
-                <li>
-                  <span class="ingredient">vcewfewv</span>
-                  <span class="value-unit">vwevwvew</span>
-                </li>
-              </ul>
+              <ul class="ingredients-list" data-card-ingredients></ul>
               <div class="description" data-card-description></div>
             </div>
           </div>
