main search and error message

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
       </div>
     </section>
     <main class="container">
+      <h1 class="no-matches text-center hide">
+        Unfortunatelly no matches could be found. You can search for example ingredients, recipe
+        names or descriptions
+      </h1>
       <div class="recipe-container row row-cols-3 g-5" data-recipe-card-container></div>
       <template data-recipe-card>
         <div class="recipe-card col">
