--- a/index.html
+++ b/index.html
@@ -36,32 +36,38 @@
       <div class="tag-container"></div>
       <div class="dropdown-container row gx-50">
         <div
-          id="ingredients-dropdown-btn"
-          class="ingredients-search rounded-1 dropdown bg-primary py-2 col-2 input-container text-light d-flex justify-content-between align-items-center"
-        >
-          <p class="my-0">Ingredients</p>
-          <img src="/assets/chevron-down.svg" alt="" />
-        </div>
-        <div
-          id="appliances-dropdown"
-          class="device-search rounded-1 dropdown bg-success py-2 col-4 input-container d-flex"
+          id="ingredients-dropdown"
+          class="ingredients-search rounded-1 dropdown bg-primary py-2 col-2 input-container d-flex"
         >
           <input
             type="text"
-            class="form-control bg-success filter-input"
+            class="form-control bg-primary filter-input text-light"
             id="filter-ingredients"
-            placeholder="Devices"
-            aria-label="devices"
+            placeholder="Ingredients"
+            aria-label="ingredients"
           />
           <img src="/assets/chevron-down.svg" alt="" />
         </div>
         <div
-          id="ustensils-dropdow"
+          id="appliances-dropdown"
+          class="appliances-search rounded-1 dropdown bg-success py-2 col-2 input-container d-flex"
+        >
+          <input
+            type="text"
+            class="form-control bg-success filter-input text-light"
+            id="filter-ingredients"
+            placeholder="Appliances"
+            aria-label="appliances"
+          />
+          <img src="/assets/chevron-down.svg" alt="" />
+        </div>
+        <div
+          id="ustensils-dropdown"
           class="utensils-search rounded-1 dropdown bg-danger py-2 col-2 input-container d-flex"
         >
           <input
             type="text"
-            class="form-control bg-danger filter-input"
+            class="form-control bg-danger filter-input text-light"
             id="filter-ingredients"
             placeholder="Utensils"
             aria-label="utensils"
@@ -70,7 +76,7 @@
         </div>
       </div>
     </section>
-    <main class="container">
+    <main class="container my-4">
       <h1 class="no-matches text-center hide">
         Unfortunatelly no matches could be found. You can search for example ingredients, recipe
         names or descriptions
