--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       </div>
     </header>
     <section class="search-filters container">
-      <div class="tag-container"></div>
+      <div class="tag-container">
+        <ul class="tags list-group list-group-horizontal"></ul>
+      </div>
       <div class="dropdown-container row gx-50">
         <div
           id="ingredients-dropdown"
