Filters, ingredient search and tags

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="dropdown-container row gx-50">
         <div
           id="ingredients-dropdown"
-          class="ingredients-search rounded-1 dropdown bg-primary py-2 col-2 input-container d-flex"
+          class="rounded-1 dropdown bg-primary py-2 col-2 input-container d-flex"
         >
           <input
             type="text"
@@ -49,32 +49,35 @@
             aria-label="ingredients"
           />
           <img src="/assets/chevron-down.svg" alt="" />
+          <ul></ul>
         </div>
         <div
           id="appliances-dropdown"
-          class="appliances-search rounded-1 dropdown bg-success py-2 col-2 input-container d-flex"
+          class="rounded-1 dropdown bg-success py-2 col-2 input-container d-flex"
         >
           <input
             type="text"
             class="form-control bg-success filter-input text-light"
-            id="filter-ingredients"
+            id="filter-appliances"
             placeholder="Appliances"
             aria-label="appliances"
           />
           <img src="/assets/chevron-down.svg" alt="" />
+          <ul></ul>
         </div>
         <div
           id="ustensils-dropdown"
-          class="utensils-search rounded-1 dropdown bg-danger py-2 col-2 input-container d-flex"
+          class="rounded-1 dropdown bg-danger py-2 col-2 input-container d-flex"
         >
           <input
             type="text"
             class="form-control bg-danger filter-input text-light"
-            id="filter-ingredients"
+            id="filter-ustensils"
             placeholder="Utensils"
             aria-label="utensils"
           />
           <img src="/assets/chevron-down.svg" alt="" />
+          <ul></ul>
         </div>
       </div>
     </section>
