delete unused file and clean html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/style.css" />
-    <script type="module" src="script.js" defer></script>
+    <script type="module" src="script.js"></script>
   </head>
   <body>
     <header class="container my-4 text-center">
@@ -32,7 +32,7 @@
         </form>
       </div>
     </header>
-    <section class="search-filters container">
+    <div class="search-filters container">
       <div class="tag-container">
         <ul class="tags list-group list-group-horizontal"></ul>
       </div>
@@ -80,7 +80,7 @@
           <ul></ul>
         </div>
       </div>
-    </section>
+    </div>
     <main class="container my-4">
       <h1 class="no-matches text-center hide">
         Unfortunatelly no matches could be found. You can search for example ingredients, recipe
