remove forward slash html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="container my-4 text-center">
       <div class="logo">
-        <img src="/assets/logo.svg" alt="Les petits plats logo" />
+        <img src="assets/logo.svg" alt="Les petits plats logo" />
       </div>
       <div class="logo-text">
         <h1 class="text-danger">Les Petits Plats</h1>
@@ -32,7 +32,7 @@
         </form>
       </div>
     </header>
-    <div class="search-filters container">
+    <section class="search-filters container">
       <div class="tag-container">
         <ul class="tags list-group list-group-horizontal"></ul>
       </div>
@@ -48,7 +48,7 @@
             placeholder="Ingredients"
             aria-label="ingredients"
           />
-          <img src="/assets/chevron-down.svg" alt="" />
+          <img src="assets/chevron-down.svg" alt="" />
           <ul></ul>
         </div>
         <div
@@ -62,7 +62,7 @@
             placeholder="Appliances"
             aria-label="appliances"
           />
-          <img src="/assets/chevron-down.svg" alt="" />
+          <img src="assets/chevron-down.svg" alt="" />
           <ul></ul>
         </div>
         <div
@@ -76,11 +76,11 @@
             placeholder="Utensils"
             aria-label="utensils"
           />
-          <img src="/assets/chevron-down.svg" alt="" />
+          <img src="assets/chevron-down.svg" alt="" />
           <ul></ul>
         </div>
       </div>
-    </div>
+    </section>
     <main class="container my-4">
       <h1 class="no-matches text-center hide">
         Unfortunatelly no matches could be found. You can search for example ingredients, recipe
@@ -97,7 +97,7 @@
             >
               <div class="recipe-card-title" data-card-title></div>
               <div class="recipe-time-container d-flex gap-2 align-items-center">
-                <img src="/assets/clock.svg" alt="" />
+                <img src="assets/clock.svg" alt="" />
                 <span class="time" data-card-time></span>
               </div>
             </div>
